@@ -1,7 +1,7 @@
 /*
  * ItemRestControllerIntegrationTest.java
  *
- * Copyright (C) 2016-2018 Pavel Prokhorov (pavelvpster@gmail.com)
+ * Copyright (C) 2016-2022 Pavel Prokhorov (pavelvpster@gmail.com)
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -23,9 +23,9 @@ package org.interactiverobotics.grocery.rest;
 import org.interactiverobotics.grocery.domain.Item;
 import org.interactiverobotics.grocery.form.ItemForm;
 import org.interactiverobotics.grocery.repository.ItemRepository;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
@@ -33,22 +33,19 @@ import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * Item REST controller integration test.
  * Performs queries to running instance of the application.
  * Requires database access.
  */
-@RunWith(SpringRunner.class)
+@ExtendWith(SpringExtension.class)
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 public class ItemRestControllerIntegrationTest {
 
@@ -62,39 +59,37 @@ public class ItemRestControllerIntegrationTest {
     private ItemRepository itemRepository;
 
 
-    @Before
-    public void setUp() throws Exception {
+    @BeforeEach
+    public void setUp() {
         itemRepository.deleteAll();
     }
 
 
     @Test
-    public void testGetItems() {
-
-        final List<Item> existingItems = new ArrayList<>();
-        itemRepository.saveAll(Arrays.asList(new Item("test-item-1"), new Item("test-item-2")))
+    public void getItems_returnsItems() {
+        List<Item> existingItems = new ArrayList<>();
+        itemRepository.saveAll(List.of(new Item("test-item-1"), new Item("test-item-2")))
                 .forEach(item -> existingItems.add(item));
 
-        final ResponseEntity<Item[]> response = restTemplate.getForEntity(ITEM_ENDPOINT, Item[].class);
+        ResponseEntity<Item[]> response = restTemplate.getForEntity(ITEM_ENDPOINT, Item[].class);
 
         itemRepository.deleteAll(existingItems);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertTrue(response.hasBody());
-        assertEquals(existingItems, Arrays.asList(response.getBody()));
+        assertEquals(existingItems, List.of(response.getBody()));
     }
 
     @Test
-    public void testGetItemsPage() {
-
-        final List<Item> existingItems = new ArrayList<>();
+    public void getItemsPage_returnsPageOfItems() {
+        List<Item> existingItems = new ArrayList<>();
         for (long i = 0; i < 100; i ++) {
             existingItems.add(itemRepository.save(new Item("test-item-" + i)));
         }
 
-        final ParameterizedTypeReference<PageResponse<Item>> responseType =
-                new ParameterizedTypeReference<PageResponse<Item>>() {};
-        final ResponseEntity<PageResponse<Item>> response = restTemplate.exchange(ITEM_ENDPOINT + "list?page=1&size=10",
+        ParameterizedTypeReference<PageResponse<Item>> responseType =
+                new ParameterizedTypeReference<>() {};
+        ResponseEntity<PageResponse<Item>> response = restTemplate.exchange(ITEM_ENDPOINT + "list?page=1&size=10",
                 HttpMethod.GET, null, responseType);
 
         itemRepository.deleteAll(existingItems);
@@ -107,11 +102,10 @@ public class ItemRestControllerIntegrationTest {
     }
 
     @Test
-    public void testGetItemById() {
+    public void getItemById_returnsItem() {
+        Item existingItem = itemRepository.save(new Item(TEST_ITEM_NAME));
 
-        final Item existingItem = itemRepository.save(new Item(TEST_ITEM_NAME));
-
-        final ResponseEntity<Item> response = restTemplate
+        ResponseEntity<Item> response = restTemplate
                 .getForEntity(ITEM_ENDPOINT + existingItem.getId(), Item.class);
 
         itemRepository.delete(existingItem);
@@ -122,19 +116,17 @@ public class ItemRestControllerIntegrationTest {
     }
 
     @Test
-    public void testGetNotExistingItemById() {
-
-        final ResponseEntity<Item> response = restTemplate.getForEntity(ITEM_ENDPOINT + new Long(999L), Item.class);
+    public void getItemById_whenItemDoesNotExist_returnsError() {
+        ResponseEntity<Item> response = restTemplate.getForEntity(ITEM_ENDPOINT + Long.valueOf(999L), Item.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
 
     @Test
-    public void testGetItemByName() {
+    public void getItemByName_returnsItem() {
+        Item existingItem = itemRepository.save(new Item(TEST_ITEM_NAME));
 
-        final Item existingItem = itemRepository.save(new Item(TEST_ITEM_NAME));
-
-        final ResponseEntity<Item> response = restTemplate
+        ResponseEntity<Item> response = restTemplate
                 .getForEntity(ITEM_ENDPOINT + "search?name=" + existingItem.getName(), Item.class);
 
         itemRepository.delete(existingItem);
@@ -145,20 +137,18 @@ public class ItemRestControllerIntegrationTest {
     }
 
     @Test
-    public void testGetNotExistingItemByName() {
-
-        final ResponseEntity<Item> response = restTemplate.getForEntity(ITEM_ENDPOINT + "search?name=test", Item.class);
+    public void getItemByName_whenItemDoesNotExist_returnsError() {
+        ResponseEntity<Item> response = restTemplate.getForEntity(ITEM_ENDPOINT + "search?name=test", Item.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
 
     @Test
-    public void testCreateItem() {
-
-        final ItemForm form = new ItemForm();
+    public void createItem_createsAndReturnsItem() {
+        ItemForm form = new ItemForm();
         form.setName("test-item");
 
-        final ResponseEntity<Item> response = restTemplate.postForEntity(ITEM_ENDPOINT, form, Item.class);
+        ResponseEntity<Item> response = restTemplate.postForEntity(ITEM_ENDPOINT, form, Item.class);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertTrue(response.hasBody());
@@ -169,14 +159,13 @@ public class ItemRestControllerIntegrationTest {
     }
 
     @Test
-    public void testUpdateItem() {
+    public void updateItem_updateaAndReturnsItem() {
+        Item existingItem = itemRepository.save(new Item(TEST_ITEM_NAME));
 
-        final Item existingItem = itemRepository.save(new Item(TEST_ITEM_NAME));
-
-        final ItemForm form = new ItemForm();
+        ItemForm form = new ItemForm();
         form.setName("updated-test-item");
 
-        final ResponseEntity<Item> response = restTemplate
+        ResponseEntity<Item> response = restTemplate
                 .postForEntity(ITEM_ENDPOINT + existingItem.getId(), form, Item.class);
 
         itemRepository.delete(existingItem);
@@ -188,21 +177,19 @@ public class ItemRestControllerIntegrationTest {
     }
 
     @Test
-    public void testUpdateNotExistingItem() {
-
-        final ItemForm form = new ItemForm();
+    public void updateItem_whenItemDoesNotExist_returnsError() {
+        ItemForm form = new ItemForm();
         form.setName("updated-test-item");
 
         final ResponseEntity<Item> response = restTemplate
-                .postForEntity(ITEM_ENDPOINT + new Long(999L), form, Item.class);
+                .postForEntity(ITEM_ENDPOINT + Long.valueOf(999L), form, Item.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
 
     @Test
-    public void testDeleteItem() {
-
-        final Item existingItem = itemRepository.save(new Item(TEST_ITEM_NAME));
+    public void deleteItem_deletesItem() {
+        Item existingItem = itemRepository.save(new Item(TEST_ITEM_NAME));
 
         restTemplate.delete(ITEM_ENDPOINT + existingItem.getId());
 
@@ -210,10 +197,9 @@ public class ItemRestControllerIntegrationTest {
     }
 
     @Test
-    public void testDeleteNotExistingItem() {
-
-        final ResponseEntity<?> response = restTemplate
-                .exchange(ITEM_ENDPOINT + new Long(999L), HttpMethod.DELETE, null, Object.class);
+    public void deleteItem_whenItemDoesNotExist_returnsError() {
+        ResponseEntity<?> response = restTemplate
+                .exchange(ITEM_ENDPOINT + Long.valueOf(999L), HttpMethod.DELETE, null, Object.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
