@@ -1,7 +1,7 @@
 /*
  * ShoppingListRestControllerIntegrationTest.java
  *
- * Copyright (C) 2016-2018 Pavel Prokhorov (pavelvpster@gmail.com)
+ * Copyright (C) 2016-2022 Pavel Prokhorov (pavelvpster@gmail.com)
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -23,9 +23,9 @@ package org.interactiverobotics.grocery.rest;
 import org.interactiverobotics.grocery.domain.ShoppingList;
 import org.interactiverobotics.grocery.form.ShoppingListForm;
 import org.interactiverobotics.grocery.repository.ShoppingListRepository;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
@@ -33,22 +33,19 @@ import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * ShoppingList REST controller integration test.
  * Performs queries to running instance of the application.
  * Requires database access.
  */
-@RunWith(SpringRunner.class)
+@ExtendWith(SpringExtension.class)
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 public class ShoppingListRestControllerIntegrationTest {
 
@@ -62,41 +59,39 @@ public class ShoppingListRestControllerIntegrationTest {
     private ShoppingListRepository shoppingListRepository;
 
 
-    @Before
-    public void setUp() throws Exception {
+    @BeforeEach
+    public void setUp() {
         shoppingListRepository.deleteAll();
     }
 
 
     @Test
-    public void testGetShoppingLists() {
-
-        final List<ShoppingList> existingShoppingLists = new ArrayList<>();
-        shoppingListRepository.saveAll(Arrays.asList(
+    public void getShoppingLists_returnsShoppingLists() {
+        List<ShoppingList> existingShoppingLists = new ArrayList<>();
+        shoppingListRepository.saveAll(List.of(
                 new ShoppingList("test-shopping-list-1"), new ShoppingList("test-shopping-list-2")))
                 .forEach(shoppingList -> existingShoppingLists.add(shoppingList));
 
-        final ResponseEntity<ShoppingList[]> response = restTemplate.getForEntity(SHOPPING_LIST_ENDPOINT,
+        ResponseEntity<ShoppingList[]> response = restTemplate.getForEntity(SHOPPING_LIST_ENDPOINT,
                 ShoppingList[].class);
 
         shoppingListRepository.deleteAll(existingShoppingLists);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertTrue(response.hasBody());
-        assertEquals(existingShoppingLists, Arrays.asList(response.getBody()));
+        assertEquals(existingShoppingLists, List.of(response.getBody()));
     }
 
     @Test
-    public void testGetShoppingListsPage() {
-
-        final List<ShoppingList> existingShoppingLists = new ArrayList<>();
+    public void getShoppingListsPage_returnsPageOfShoppingLists() {
+        List<ShoppingList> existingShoppingLists = new ArrayList<>();
         for (long i = 0; i < 100; i ++) {
             existingShoppingLists.add(shoppingListRepository.save(new ShoppingList("test-shopping-list-" + i)));
         }
 
-        final ParameterizedTypeReference<PageResponse<ShoppingList>> responseType =
-                new ParameterizedTypeReference<PageResponse<ShoppingList>>() {};
-        final ResponseEntity<PageResponse<ShoppingList>> response =
+        ParameterizedTypeReference<PageResponse<ShoppingList>> responseType =
+                new ParameterizedTypeReference<>() {};
+        ResponseEntity<PageResponse<ShoppingList>> response =
                 restTemplate.exchange(SHOPPING_LIST_ENDPOINT + "list?page=1&size=10",
                         HttpMethod.GET, null, responseType);
 
@@ -110,12 +105,11 @@ public class ShoppingListRestControllerIntegrationTest {
     }
 
     @Test
-    public void testGetShoppingListById() {
-
-        final ShoppingList existingShoppingList = shoppingListRepository
+    public void getShoppingListById_returnsShoppingList() {
+        ShoppingList existingShoppingList = shoppingListRepository
                 .save(new ShoppingList(TEST_SHOPPING_LIST_NAME));
 
-        final ResponseEntity<ShoppingList> response = restTemplate
+        ResponseEntity<ShoppingList> response = restTemplate
                 .getForEntity(SHOPPING_LIST_ENDPOINT + existingShoppingList.getId(), ShoppingList.class);
 
         shoppingListRepository.delete(existingShoppingList);
@@ -126,21 +120,19 @@ public class ShoppingListRestControllerIntegrationTest {
     }
 
     @Test
-    public void testGetNotExistingShoppingListById() {
-
-        final ResponseEntity<ShoppingList> response = restTemplate
-                .getForEntity(SHOPPING_LIST_ENDPOINT + new Long(999L), ShoppingList.class);
+    public void getShoppingListById_whenShoppingListDoesNotExist_returnsError() {
+        ResponseEntity<ShoppingList> response = restTemplate
+                .getForEntity(SHOPPING_LIST_ENDPOINT + Long.valueOf(999L), ShoppingList.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
 
     @Test
-    public void testGetShoppingListByName() {
-
-        final ShoppingList existingShoppingList = shoppingListRepository
+    public void getShoppingListByName_returnsShoppingList() {
+        ShoppingList existingShoppingList = shoppingListRepository
                 .save(new ShoppingList(TEST_SHOPPING_LIST_NAME));
 
-        final ResponseEntity<ShoppingList> response = restTemplate
+        ResponseEntity<ShoppingList> response = restTemplate
                 .getForEntity(SHOPPING_LIST_ENDPOINT + "search?name=" + existingShoppingList.getName(),
                         ShoppingList.class);
 
@@ -152,21 +144,19 @@ public class ShoppingListRestControllerIntegrationTest {
     }
 
     @Test
-    public void testGetNotExistingShoppingListByName() {
-
-        final ResponseEntity<ShoppingList> response = restTemplate
+    public void getShoppingListByName_whenShoppingListDoesNotExist_returnsError() {
+        ResponseEntity<ShoppingList> response = restTemplate
                 .getForEntity(SHOPPING_LIST_ENDPOINT + "search?name=test", ShoppingList.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
 
     @Test
-    public void testCreateShoppingList() {
-
-        final ShoppingListForm form = new ShoppingListForm();
+    public void createShoppingList_createsAndReturnsShoppingList() {
+        ShoppingListForm form = new ShoppingListForm();
         form.setName(TEST_SHOPPING_LIST_NAME);
 
-        final ResponseEntity<ShoppingList> response = restTemplate
+        ResponseEntity<ShoppingList> response = restTemplate
                 .postForEntity(SHOPPING_LIST_ENDPOINT, form, ShoppingList.class);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
@@ -178,15 +168,14 @@ public class ShoppingListRestControllerIntegrationTest {
     }
 
     @Test
-    public void testUpdateShoppingList() {
-
-        final ShoppingList existingShoppingList = shoppingListRepository
+    public void updateShoppingList_updatesAndReturnsShoppingList() {
+        ShoppingList existingShoppingList = shoppingListRepository
                 .save(new ShoppingList(TEST_SHOPPING_LIST_NAME));
 
-        final ShoppingListForm form = new ShoppingListForm();
+        ShoppingListForm form = new ShoppingListForm();
         form.setName("updated-test-shopping-list");
 
-        final ResponseEntity<ShoppingList> response = restTemplate
+        ResponseEntity<ShoppingList> response = restTemplate
                 .postForEntity(SHOPPING_LIST_ENDPOINT + existingShoppingList.getId(), form, ShoppingList.class);
 
         shoppingListRepository.delete(existingShoppingList);
@@ -198,21 +187,19 @@ public class ShoppingListRestControllerIntegrationTest {
     }
 
     @Test
-    public void testUpdateNotExistingShoppingList() {
-
-        final ShoppingListForm form = new ShoppingListForm();
+    public void updateShoppingList_whenShoppingListDoesNotExist_returnsError() {
+        ShoppingListForm form = new ShoppingListForm();
         form.setName("updated-test-shopping-list");
 
-        final ResponseEntity<ShoppingList> response = restTemplate
-                .postForEntity(SHOPPING_LIST_ENDPOINT + new Long(999L), form, ShoppingList.class);
+        ResponseEntity<ShoppingList> response = restTemplate
+                .postForEntity(SHOPPING_LIST_ENDPOINT + Long.valueOf(999L), form, ShoppingList.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
 
     @Test
-    public void testDeleteShoppingList() {
-
-        final ShoppingList existingShoppingList = shoppingListRepository
+    public void deleteShoppingList_deletesShoppingList() {
+        ShoppingList existingShoppingList = shoppingListRepository
                 .save(new ShoppingList(TEST_SHOPPING_LIST_NAME));
 
         restTemplate.delete(SHOPPING_LIST_ENDPOINT + existingShoppingList.getId());
@@ -221,10 +208,9 @@ public class ShoppingListRestControllerIntegrationTest {
     }
 
     @Test
-    public void testDeleteNotExistingShoppingList() {
-
-        final ResponseEntity<?> response = restTemplate
-                .exchange(SHOPPING_LIST_ENDPOINT + new Long(999L),
+    public void deleteShoppingList_whenShoppingListDoesNotExist_returnsError() {
+        ResponseEntity<?> response = restTemplate
+                .exchange(SHOPPING_LIST_ENDPOINT + Long.valueOf(999L),
                         HttpMethod.DELETE, null, Object.class);
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
